[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civicutils"
version = "1.0.1"
description = "Python package for querying, matching and downstream processing of CIViC information."
requires-python = ">=3.7"
dependencies = ["civicpy>=3.0.0"]
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
  { name="María Lourdes Rosano-Gonzalez", email="lourdes.rosanogonzalez@gmail.com" },
  { name="Vipin T. Sreedharan", email="vipin.sreedharan@nexus.ethz.ch" },
  { name="Antoine Hanns", email="hanns@nexus.ethz.ch" },
  { name="Daniel J. Stekhoven", email="stekhoven@nexus.ethz.ch" },
  { name="Franziska Singer", email="singer@nexus.ethz.ch" }
]
maintainers = [
  { name="Antoine Hanns", email="hanns@nexus.ethz.ch" }
]
keywords = ["in-silico drug prediction", "variant prioritization", "clinical relevance", "CIViC database", "API query"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS"
]

[project.urls]
"Homepage" = "https://github.com/ETH-NEXUS/civicutils"
"Bug Tracker" = "https://github.com/ETH-NEXUS/civicutils/issues"
